<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vdb_mapping_msgs</name>
  <version>0.0.0</version>
  <description>Collection of msgs and srvs used for VDB Mapping</description>
  <maintainer email="omerf.kaya97@gmail.com">Omer KAYA</maintainer>
  <license>TODO: License declaration</license>

  <author email="omerf.kaya97@gmail.com">Omer KAYA</author>

  
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
